--- a/expanding-cards/style/style.css
+++ b/expanding-cards/style/style.css
@@ -24,15 +24,43 @@ main {
     flex: 0.94;
     height: 94%;
     border-radius: 10px;
-    padding: 1rem;
+    padding: 2%;
     list-style: none;
 
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: .4rem;
+    gap: 2%;
 
     background: whitesmoke;
+}
+
+
+.gallery-item {
+    height: 100%;
+    width: 12%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: width .5s;
+}
+
+.gallery-item img {
+    width: 10vw;
+    height: 10vw;
+    object-fit: cover;
+    object-fit: center;
+    border-radius: 50%;
+    transform: rotate(360deg);
+    transition: height 1s, width .5s, border-radius .5s 1s, transform .5s 1.5s;
+}
+
+.gallery-item img:hover {
+    cursor: pointer;
+    height: 100%;
+    border-radius: 10px;
+    transform: rotate(0deg);
+    transition: transform .5s, width .5s, border-radius .5s .5s, height 1s 1s;
 }
 
 .gallery-item-selected {
@@ -41,7 +69,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: height .25s, width .5s .25s;
+    transition: width .5s;
 }
 
 .gallery-item-selected img {
@@ -50,35 +78,9 @@ main {
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
-    transition: transform .5s, border-radius .5s .5s, width .5s .5s, height .5s 1s;
+    transition: 1s;
 }
 
-.gallery-item {
-    height: 100%;
-    width: 12%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: width .5s, height 0.25s .5s;
-}
-
-.gallery-item img {
-    height: 8rem;
-    width: 8rem;
-    object-fit: cover;
-    object-fit: center;
-    border-radius: 50%;
-    transform: rotate(360deg);
-    transition: height .5s, width .5s .5s, border-radius .5s .5s, transform .5s 1s;
-}
-
-
-img:hover {
+.gallery-item-selected img:hover {
     cursor: pointer;
-    height: 100%;
-    width: 100%;
-    border-radius: 10px;
-    transform: rotate(0deg);
-    transition: transform .5s, border-radius .5s .5s, width .5s .5s, height .5s 1s;
-
 }
